# camera_lidar_3D_perception_ws

./: .gitignore  .gitmodules  README.md  rosbag_to_video.py
docker/: .isaac_ros_common-config  Dockerfile.ws_env
docker/scripts/entrypoint_additions/: ws_entrypoint.sh
docker/startup/: aici_dev_startup.sh  ros_dev_startup.sh  srd_dev_startup.sh
image_overlay/bathroom/: rendered_boxes_20251029_033739.json
image_overlay/office/: detections.json  rendered_boxes_20251029_032545.json
src/camera_lidar_3d_perception/: CMakeLists.txt  README.md  package.xml
src/camera_lidar_3d_perception/config/: config.yaml
src/camera_lidar_3d_perception/include/camera_lidar_3d_perception/: camera_lidar_perception_node.hpp
src/camera_lidar_3d_perception/launch/: camera_lidar_perception_node.launch.py
src/camera_lidar_3d_perception/src/: camera_lidar_perception_node.cpp
src/camera_lidar_perception_bringup/: CMakeLists.txt  README.md  package.xml
src/camera_lidar_perception_bringup/launch/: camera_lidar_perception_bringup.launch.py  nav2_map_server.launch.py
src/camera_lidar_perception_bringup/maps/bathroom/: bathroom.yaml
src/camera_lidar_perception_bringup/maps/office/: office.yaml
src/camera_lidar_perception_bringup/rviz/: rviz_config.rviz
src/camera_lidar_perception_bringup/script/: ocp_generator.py  overlay_exporter.py
src/yolo11_inference/: CMakeLists.txt  README.md  package.xml
src/yolo11_inference/config/: params.yaml
src/yolo11_inference/include/yolo11_inference/: yolo11_inference_node.hpp  yolo_dnn_inference.hpp
src/yolo11_inference/launch/: yolo11_inference_node.launch.py
src/yolo11_inference/script/: viz.py
src/yolo11_inference/src/: yolo11_inference_node.cpp  yolo_dnn_inference.cpp
